# baircondor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  progress.md  pyproject.toml  spec.md
.github/workflows/: python-package.yml
baircondor/: __init__.py  api.py  cli.py  config.py  history.py  meta.py  setup.py  submit.py  templates.py
examples/: README.md  config.yaml  gpu_test.py  python_api_patterns.py
tests/: test_api.py  test_conda_config.py  test_history.py  test_jobsub.py  test_meta.py  test_rundir.py  test_setup.py
